[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "house_prediction"
version = "0.0.1"
authors = [
  { name="serdar", email="serdar.oezer@cgi.com" },
]
description = "training and testig interface for polynomial model"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]